2.0.12

	* add option to send host header in HTTP proxy CONNECT command
	* cache DNS failures for a shorter time
	* file_renamed_alert is always posted, regardless of alert mask
	* add feature to request resume data synchronously
	* don't leak file descriptors to child processes (O_CLOEXEC)
	* optimize the utp resend
	* optimize tracker announcements
	* fix handling of invalid filenames
	* add support for I2CP inbound.lengthVariance and outbound.lengthVariance tunnel settings

2.0.11 released

	* validate add_torrent_params::save_path at run-time
	* use stricter rules for what filenames are valid on Android
	* fix applying IP filter to DHT traffic (HanabishiRecca)
	* fix race condition when cancelling requests after becoming a seed
	* fix performance bug in the file pool, evicting MRU instead of LRU (HanabishiRecca)
	* fix bug where file_progress could sometimes be reported as >100%
	* don't hint FADV_RANDOM on posix systems. May improve seeding performance
	* allow boost connect while checking resume data if no_verify_files flag is set
	* fix BEP-40 peer priority for IPv6
	* limit piece size in torrent creator
	* fix file pre-allocation when changing file priority (HanabishiRecca)
	* fix uTP issue where closing the connection could corrupt the payload
	* apply DSCP/TOS to sockets before initiating the TCP connection
	* assume copy_file_range() exists on linux (unless old glibc)
	* fix issue where set_piece_deadline() did not correctly post read_piece_alert
	* fix integer overflow in piece picker
	* torrent_status::num_pieces counts pieces passed hash check, as documented
	* check settings_pack::max_out_request_queue before performance alert
	* add announce_port setting to override the port announced to trackers

2.0.10 released

	* allow on_unknown_torrent method in the absence of active torrents (new plugin feature added)
	* add feature to async_move_storage() to not move files
	* fix reject resume data if it contains mismatching info hashes